--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,36 @@ a {
     color-scheme: dark;
   }
 }
+
+@font-face {
+  font-family: 'Minecraftia';
+  src: url('../public/fonts/Minecraftia-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Minecraftia', monospace, sans-serif;
+}
+
+body {
+  background-color: #2c6e2c;
+  color: #ddd;
+  text-shadow: 2px 2px 0 #000;
+}
+
+header {
+  background-image: url('/images/minecraft-grass-block.png');
+  background-repeat: repeat;
+  border-bottom: 4px solid #6b4e16;
+}
+
+a {
+  color: #a3d900;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
