updated header with different images per page

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-image: url('/background.png');
+  background-image: url('/header-images/home.png');
   background-size: cover;
   background-position: center;
   color: white;
