add lamp texture alongside the status of the server

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -47,6 +47,10 @@ html, body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+img {
+  box-shadow: 1px 1px 0 #000;
+}
+
 body.layout {
   display: flex;
   flex-direction: column;
