--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,7 +1,7 @@
 /* Font-face for Minecraftia */
 @font-face {
-  font-family: 'Minecraftia';
-  src: url('/fonts/Minecraftia-Regular.ttf') format('truetype');
+  font-family: 'Minecraft';
+  src: url('/fonts/Minecraft.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
@@ -33,18 +33,27 @@
   padding: 0;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
   max-width: 100vw;
   overflow-x: hidden;
-  font-family: 'Minecraftia', monospace, sans-serif;
+  font-family: 'Minecraft', monospace, sans-serif;
   background-color: #2c6e2c;
   color: #ddd;
   text-shadow: 2px 2px 0 #000;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+p {
+  font-size: 16px;
+  margin-bottom: 0.5rem;
 }
 
 p img {
