--- a/frontend/components/Header.module.css
+++ b/frontend/components/Header.module.css
@@ -2,6 +2,7 @@
   background-image: url('/header-images/home.png');
   background-size: cover;
   background-position: center;
+  font-size: 16px;
   color: white;
   padding: 3rem 1rem;
   text-align: center;
