--- a/frontend/app/page.module.css
+++ b/frontend/app/page.module.css
@@ -122,7 +122,7 @@ a.secondary {
 
   .footer a:hover {
     text-decoration: underline;
-    text-underline-offset: 4px;
+    text-underline-offset: 0;
   }
 }
 
